#4506 fix subtle overlap of leftward menu

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -971,6 +971,7 @@ select.ui.dropdown {
 .ui.dropdown .menu .left.menu {
   left: auto;
   right: 100%;
+  margin: @leftSubMenuMargin !important;
   border-radius: @leftSubMenuBorderRadius !important;
 }
 
